Removing base path from endpoint docs
